--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <h1>Enter your player name to start</h1>
     <form action="">
       <input type="text" class="usernameInput" maxlength="12">
-      <button class="usernameSubmit" disabled>Start</button>
+      <button type="submit" class="usernameSubmit" disabled>Start</button>
     </form>
   </div>
 
@@ -115,7 +115,7 @@
         </ul>
         <form class="chatForm">
           <input type="text" class="chatInput" placeholder="Type a message..." />
-          <button type="submit">Send</button>
+          <button type="submit" class="chatButton"></button>
         </form>
       </div>
     </div>
