landing javascript update

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
 <body>
   
   <!--Landing Page / Enter User Name-->
-  <div id="landingScreen" class="hidden">
+  <div id="landingScreen" class="">
     <h1>Enter your player name to start</h1>
-    <form action="">
+    <form class="usernameForm">
       <input type="text" class="usernameInput" maxlength="12">
       <button type="submit" class="usernameSubmit" disabled>Start</button>
     </form>
@@ -66,7 +66,7 @@
   </div>
 
   <!--Game-->
-  <div id="gameScreen" class="">
+  <div id="gameScreen" class="hidden">
     <div class="leftControl">
       <div class="topControls">
         <button class="exitButton">Exit</button>
