landing page complete

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
   <div id="landingScreen" class="">
     <h1>Enter your player name to start</h1>
     <form class="usernameForm">
+      <span class="errorMessage">Sorry, this name is already taken.</span>
       <input type="text" class="usernameInput" maxlength="12">
       <button type="submit" class="usernameSubmit" disabled>Start</button>
     </form>
