added lobby messaging

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
     </form>
   </div>
 
+
   <!--Lobby-->
   <div id="lobbyScreen" class="hidden">
       <div class="allTimeLeaderboard">
@@ -65,6 +66,45 @@
       </div>
     </div>
   </div>
+
+
+  <!--Ready Screen-->
+  <div id="readyScreen" class="hidden">
+    <button class="exitButton">Exit</button>
+    <div class="readyMiddle">
+      <h1>0/4 Players</h1>
+
+      <div class="joinedPlayers">
+        <div class="joinedPlayer">
+          <div class="playerBubble" id="redPlayer">
+            <h2>OvenBean</h2>
+          </div>
+          <div class="readyStatus ready"></div>
+        </div>
+        <div class="joinedPlayer">
+          <div class="playerBubble">
+            <h2>Player Name</h2>
+          </div>
+          <div class="readyStatus"></div>
+        </div>
+        <div class="joinedPlayer">
+          <div class="playerBubble">
+            <h2>Player Name</h2>
+          </div>
+          <div class="readyStatus"></div>
+        </div>
+        <div class="joinedPlayer">
+          <div class="playerBubble">
+            <h2>Player Name</h2>
+          </div>
+          <div class="readyStatus"></div>
+        </div>
+      </div>
+
+      <button class="readyButton">Ready</button>
+    </div>
+  </div>
+
 
   <!--Game-->
   <div id="gameScreen" class="hidden">
