ready screen fully implemented and mega bug fixes

--- a/html/index.html
+++ b/html/index.html
@@ -66,25 +66,25 @@
       <h1>0/4 Players</h1>
 
       <div class="joinedPlayers">
-        <div class="joinedPlayer">
-          <div class="playerBubble" id="redPlayer">
-            <h2>OvenBean</h2>
-          </div>
-          <div class="readyStatus ready"></div>
-        </div>
-        <div class="joinedPlayer">
+        <div class="joinedPlayer" data-uid="">
           <div class="playerBubble">
             <h2>Player Name</h2>
           </div>
           <div class="readyStatus"></div>
         </div>
-        <div class="joinedPlayer">
+        <div class="joinedPlayer" data-uid="">
           <div class="playerBubble">
             <h2>Player Name</h2>
           </div>
           <div class="readyStatus"></div>
         </div>
-        <div class="joinedPlayer">
+        <div class="joinedPlayer" data-uid="">
+          <div class="playerBubble">
+            <h2>Player Name</h2>
+          </div>
+          <div class="readyStatus"></div>
+        </div>
+        <div class="joinedPlayer" data-uid="">
           <div class="playerBubble">
             <h2>Player Name</h2>
           </div>
@@ -187,9 +187,10 @@
     </div>
   </div>
 
-  <script src="websocket.js"></script>
   <script src="landing.js"></script>
+  <script src="websocket.js"></script>
   <script src="lobby.js"></script>
+  <script src="ready.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
