ingame leaderboard fully functional

--- a/html/index.html
+++ b/html/index.html
@@ -123,19 +123,19 @@
               <span class="wordsFound">27</span>
             </li>
             <li id="bluePlayer" class="player">
-              <span class="rank">1st</span>
-              <span class="username">OvenBean</span>
-              <span class="wordsFound">27</span>
+              <span class="rank">2nd</span>
+              <span class="username">bob</span>
+              <span class="wordsFound">25</span>
             </li>
             <li id="pinkPlayer" class="player">
-              <span class="rank">1st</span>
-              <span class="username">OvenBean</span>
-              <span class="wordsFound">27</span>
+              <span class="rank">3rd</span>
+              <span class="username">Hi</span>
+              <span class="wordsFound">20</span>
             </li>
             <li id="greenPlayer" class="player">
-              <span class="rank">1st</span>
-              <span class="username">OvenBean</span>
-              <span class="wordsFound">27</span>
+              <span class="rank">4th</span>
+              <span class="username">fd</span>
+              <span class="wordsFound">19</span>
             </li>
           </ul>
         </div>
