end game and game timer implemented

--- a/html/index.html
+++ b/html/index.html
@@ -105,7 +105,10 @@
       <div class="topControls">
         <button class="exitButton">Exit</button>
         <div class="gameTimer">
-
+          <p>Time Remaining:</p>
+          <div class="gameTimerValue">
+            5:00
+          </div>
         </div>
       </div>
       <div class="gameLeaderboard">
@@ -154,6 +157,38 @@
       </div>
       <div class="wordBank">
       </div>
+    </div>
+  </div>
+
+  <!--End Game Screen-->
+  <div id="endGameScreen" class="hidden">
+    <div class="results">
+      <h1>Results</h1>
+      <div class="leaderboard">
+        <ul class="leaderboardList">
+          <li id="redPlayer" class="player">
+            <span class="rank">1st</span>
+            <span class="username">OvenBean</span>
+            <span class="wordsFound">27</span>
+          </li>
+          <li id="bluePlayer" class="player">
+            <span class="rank">2nd</span>
+            <span class="username">bob</span>
+            <span class="wordsFound">25</span>
+          </li>
+          <li id="pinkPlayer" class="player">
+            <span class="rank">3rd</span>
+            <span class="username">Hi</span>
+            <span class="wordsFound">20</span>
+          </li>
+          <li id="greenPlayer" class="player">
+            <span class="rank">4th</span>
+            <span class="username">fd</span>
+            <span class="wordsFound">19</span>
+          </li>
+        </ul>
+      </div>
+      <button class="backToLobby">Back to Lobby</button>
     </div>
   </div>
 
