fixed reused game data bug

--- a/html/index.html
+++ b/html/index.html
@@ -147,7 +147,7 @@
         <ul class="messageList">
         </ul>
         <form class="chatForm">
-          <input type="text" class="chatInput" placeholder="Type a message..." />
+          <input type="text" class="chatInput" maxlength="140" placeholder="Type a message..." />
           <button type="submit" class="chatButton"></button>
         </form>
       </div>
