--- a/html/index.html
+++ b/html/index.html
@@ -98,6 +98,13 @@
     <div class="leftControl">
       <div class="topControls">
         <button class="exitButton">Exit</button>
+        <div class="gameStats">
+          <p id="gridDensity">Grid Density: 0.71</p>
+          <p id="verticalPercentage">Vertical Words: 23%</p>
+          <p id="horizontalPercentage">Horizontal Words: 18%</p>
+          <p id="diagonalRPercentage">Diagonal Right Words: 21%</p>
+          <p id="diagonalLPercentage">Diagonal Left Words: 22%</p>
+        </div>
         <div class="gameTimer">
           <p>Time Remaining:</p>
           <div class="gameTimerValue">
