updated game stats front end and fixed game chat sizing bug

--- a/html/index.html
+++ b/html/index.html
@@ -100,7 +100,8 @@
         <button class="exitButton">Exit</button>
         <div class="gameStats">
           <p id="gridDensity">Grid Density: 0.71</p>
-          <p id="verticalPercentage">Vertical Words: 23%</p>
+          <p id="verticalUPercentage">Vertical Up Words: 23%</p>
+          <p id="verticalDPercentage">Vertical Down Words: 23%</p>
           <p id="horizontalPercentage">Horizontal Words: 18%</p>
           <p id="diagonalRPercentage">Diagonal Right Words: 21%</p>
           <p id="diagonalLPercentage">Diagonal Left Words: 22%</p>
